[gd_scene load_steps=11 format=2]

[ext_resource path="res://textures/blocks/teleport_portal.png" type="Texture" id=1]
[ext_resource path="res://textures/effects/other/particle.png" type="Texture" id=2]
[ext_resource path="res://textures/effects/other/star.png" type="Texture" id=3]
[ext_resource path="res://scripts/game/other/teleport_portal.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 30 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.21118, 0.509317, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Animation" id=3]
resource_name = "enter"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite/star:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/star:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/star:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "exit"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite/star:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/star:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/star:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "enter"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite/star:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/star:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/star:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "exit"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite/star:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/star:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 5, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite/star:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="teleport_portal" type="Node2D"]
script = ExtResource( 4 )

[node name="portal0" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 6
monitorable = false

[node name="shape" type="CollisionShape2D" parent="portal0"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="portal0"]
modulate = Color( 0, 0, 1, 1 )
z_index = -6
texture = ExtResource( 1 )

[node name="particles" type="CPUParticles2D" parent="portal0/sprite"]
amount = 24
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 40.0
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
radial_accel = -30.0
scale_amount = 2.0
color_ramp = SubResource( 2 )

[node name="star" type="Sprite" parent="portal0/sprite"]
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )

[node name="anim" type="AnimationPlayer" parent="portal0"]
anims/enter = SubResource( 3 )
anims/exit = SubResource( 4 )

[node name="portal1" type="Area2D" parent="."]
position = Vector2( 0, -64 )
collision_layer = 8
collision_mask = 6
monitorable = false

[node name="shape" type="CollisionShape2D" parent="portal1"]
shape = SubResource( 1 )

[node name="sprite" type="Sprite" parent="portal1"]
modulate = Color( 1, 0.501961, 0, 1 )
z_index = -6
texture = ExtResource( 1 )

[node name="particles" type="CPUParticles2D" parent="portal1/sprite"]
amount = 24
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 40.0
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
radial_accel = -30.0
scale_amount = 2.0
color_ramp = SubResource( 2 )

[node name="star" type="Sprite" parent="portal1/sprite"]
self_modulate = Color( 1, 1, 1, 0.501961 )
rotation = 3.14159
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 3 )

[node name="anim" type="AnimationPlayer" parent="portal1"]
anims/enter = SubResource( 5 )
anims/exit = SubResource( 6 )

[connection signal="body_entered" from="portal0" to="." method="enter_portal" binds= [ 0 ]]
[connection signal="body_exited" from="portal0" to="." method="exit_portal" binds= [ 0 ]]
[connection signal="body_entered" from="portal1" to="." method="enter_portal" binds= [ 1 ]]
[connection signal="body_exited" from="portal1" to="." method="exit_portal" binds= [ 1 ]]
